--- a/index.html
+++ b/index.html
@@ -84,8 +84,65 @@
                     AMOREPACIFIC의 독자적인 녹차 콜렉션이<br>
                     무너진 피부 시간을 되돌리다.</p>
                <a href="#">VIEW DETAILS</a>
-          
      </div>
+
+     <div class="wrapper">
+          <div class="section1">
+               <div class="box1">
+                    <img class="m" src="./images/img_main_film_m.jpg" alt="">
+                    <img class="pc" src="./images/img_main_film.jpg" alt="">
+                    <div class="text">
+                         <p>BRAND FILM<br>
+                         TIMELESS BEAUTY, AMOREPACIFIC</p>
+                         <a href="#">PLAY FILM</a>
+                    </div>
+               </div>
+               <div class="box2">
+                    <img class="m" src="./images/img_main_artbook_m.jpg" alt="">
+                    <img class="pc" src="./images/img_main_artbook.jpg" alt="">
+                    <div class="text">
+                         <p>ART BOOK<br>
+                         FLAGSHIP BRAND EXPERIENCE</p>
+                         <a href="#">VIEW DETAILS</a>
+                    </div>
+               </div>
+          </div>
+          <div class="section2">
+               <div class="box1">
+                   <div class="photo">
+                         <img src="./images/img_news_1.jpg" alt="">
+                    </div> 
+                    <div class="text">
+                         <p class="m">70주년 기념</p>
+                         <p class="pc">Asian Beauty Green Tea Collection 출시</p>
+                         <a href="#">VIEW DETAILS</a>
+                    </div>
+               </div>
+               <div class="box2">
+                    <img class="m" src="./images/img_news_2_m.jpg" alt="">
+                    <img class="pc" src="./images/img_news_2.jpg" alt="">
+                    <div class="text">
+                         <p class="m">브랜드 웹사이트 리뉴얼</p>
+                         <p class="pc">새로운 공간을 만들어보세요.</p>
+                         <a href="#">VIEW DETAILS</a>
+                    </div>
+               </div>
+               <div class="box3">
+                    <div class="photo">
+                         <img src="./images/img_news_3.jpg" alt="">
+                    </div>
+                    <div class="text">
+                         <p class="m">뉴욕 BloomingDale's 입점</p>
+                         <p class="pc">세계인을 감동시킨 타임리스 뷰티</p>
+                         <a href="#">VIEW DETAILS</a>
+                    </div>
+               </div>
+          </div>
+     </div>
+
+
+
+
 
 
      <script>
